--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
       <div class="box">
         <div class="square"></div>
-        <div class="square"></div>
+        <div class="rectangle"></div>
         <div class="square"></div>
       </div>
     </div>
